final push for notation

--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
       	<script src="js/scripts/fire.js"></script>
       	<script src="js/scripts/getters.js"></script>
       	<script src="js/scripts/preload.js"></script>
-      	<script src="js/scripts/ship.js"></script>
-      	<script src="js/scripts/ennemies.js"></script>
+        <script src="js/scripts/ship.js"></script>
+        <script src="js/scripts/ennemies.js"></script>
+        <script src="js/scripts/boss.js"></script>
+        <script src="js/scripts/bonus.js"></script>
       	<script src="js/scripts/tick.js"></script>
       	<script src="js/scripts/keyhandler.js"></script>
         <script src="js/scripts/globals.js"></script>
@@ -24,5 +26,8 @@
       	<canvas id="shooter" width="800" height="600" style="background:black;">
       		  no canvas generated
       	</canvas>
+        <p>Press Z, Q, S, D OR UP, DOWN, RIGHT and LEFT keys to move</p>
+        <p>Press Space to shoot</p>
+        <p>Press Y to pause</p>
     </body>
 </html>
